--- a/Lab1/app/src/main/res/layout/activity_main.xml
+++ b/Lab1/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,5 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:srcCompat="@android:color/darker_gray" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
